# NETIC

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.config/ngrok/: ngrok.yml
.devcontainer/: devcontainer.json
NETIC_Algarve/main/: asgi.py  settings.py  wsgi.py
devcontainer/: devcontainer.json
mongo_cli/: README.md  pyproject.toml
mongo_cli/src/: main.py  mongo_manager.py
ops/: src.Dockerfile
src/: README.md  data.json  pyproject.toml
src/app/: consumers.py  context.py  forms.py  models.py  routing.py  urls.py  views.py
src/app/fixtures/: user_profiles.json
src/app/migrations/: 0001_initial.py  0002_alter_userprofile_curso_alter_userprofile_email_and_more.py
src/app/static/css/: style.css  style.css.map  style.sass
src/app/static/css/components/: _card.sass
src/app/static/css/layouts/: _chat.sass  _chatPage.sass  _mainPage.sass  _myNetwork.sass  _profilePage.sass
src/app/static/css/utils/: _colors.sass
src/app/static/js/cardsHandler/: cardsHandler.js
src/app/static/js/courseSlider/: slider.js
src/app/static/js/currentPage/: currentPage.js
src/app/templates/: base.html
src/app/templates/account/: login.html
src/app/templates/chat/: chat.html  index.html
src/app/templates/components/: card.html  userModel.html
src/app/templates/login/: index.html
src/app/templates/mainPage/: index.html
src/app/templates/myNetwork/: index.html
src/app/templates/particle/: particle.html
src/app/templates/profilePage/: index.html
src/app/templatetags/: custom_filters.py
src/main/: asgi.py  context.py  forms.py  models.py  settings.py  urls.py  views.py
src/main/management/commands/: criar_users.py  update_avatars.py
src/main/users/: adapter.py
src/main/utils/: mongoDb.py
src/static/css/: style.css  style.css.map  style.sass
src/static/css/components/: _card.sass  _userModel.sass
src/static/css/layouts/: _base.sass  _mainPage.sass  _myNetwork.sass
src/static/css/utils/: _colors.sass  _fonts.sass
src/static/js/cardsHandler/: cardsHandler.js
src/static/js/courseSlider/: slider.js
src/staticfiles/css/: style.css  style.css.map  style.sass
src/staticfiles/css/components/: _card.sass  _particles.sass  _userModel.sass
src/staticfiles/css/layouts/: _base.sass  _chat.sass  _chatPage.sass
src/staticfiles/css/utils/: _colors.sass
src/staticfiles/js/cardsHandler/: cardsHandler.js
src/template/: base.html
src/template/components/: card.html
src/template/mainPage/: index.html
src/template/myNetwork/: index.html
src/template/particle/: particle.html
