[tool.poetry]
name = "netic"
version = "0.1.0"
description = "A Networking app for ETIC_Algarve"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
python-dotenv = "^1.0.1"
pillow = "^11.0.0"
django-cors-headers = "^4.6.0"
psycopg = {extras = ["binary"], version = "^3.2.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
