[tool.poetry]
name = "NETIC"
version = "0.1.0"
description = "A Networking app for ETIC_Algarve"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
gunicorn = "^23.0.0"
python-dotenv = "^1.0.1"
pillow = "^11.0.0"
django-cors-headers = "^4.6.0"
python-decouple = "^3.8"
psycopg = {extras = ["binary"], version = "^3.2.3"}
requests = "^2.32.3"
pyjwt = "^2.9.0"
cryptography = "^43.0.3"
faker = "^30.8.2"
django-allauth = {extras = ["socialaccount"], version = "^65.1.0"}
ngrok = "^1.4.0"
pymongo = "^4.10.1"
channels = "^4.1.0"
channels-redis = "^4.2.0"
daphne = "^4.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"